fixBug